chore: improve README

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -190,47 +190,188 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7232  6703   13.00008  259   56          -    0.00000      -  81.8   10s\n",
-      "  7288  6732    0.00000   18  278          -    0.00000      -  11.4   15s\n",
-      "  8400  7403   21.00012   80  217          -    0.00000      -  29.5   20s\n",
-      " 10858  8695   49.00000  211  227          -    0.00000      -  40.5   25s\n",
-      " 14126 10286   38.00038  471  284          -    0.00000      -  47.7   30s\n",
-      " 16618 11228    0.00013   67  330          -    0.00000      -  50.8   35s\n",
-      " 19628 12811    0.00046  364  305          -    0.00000      -  52.7   40s\n",
-      " 22693 14772   51.00000  581  374          -    0.00000      -  50.4   45s\n",
-      " 25568 16579   75.00000  888  270          -    0.00000      -  48.1   50s\n",
-      " 28539 18282  108.00000 1242  331          -    0.00000      -  46.2   56s\n",
-      " 29266 19104  108.00000 1325  276          -    0.00000      -  46.0   67s\n",
-      " 31296 20972    0.00014  223  345          -    0.00000      -  44.9   70s\n",
-      " 34333 24226 infeasible  516               -    0.00000      -  42.8   76s\n",
-      " 38808 27958   68.00007 1328  304          -    0.00000      -  40.0   80s\n",
-      " 41929 30213    0.00028  232  320          -    0.00000      -  38.0   85s\n",
-      " 43756 33201    0.00031  409  286          -    0.00000      -  36.9   90s\n",
-      " 47894 36409   19.00018  733  276          -    0.00000      -  34.7   95s\n",
-      " 51150 40023   27.00020 1067  274          -    0.00000      -  33.5  100s\n",
-      " 54665 43015   40.00013 1323  257          -    0.00000      -  32.7  105s\n",
-      " 57215 45153   67.00000 1440  320          -    0.00000      -  32.5  110s\n",
-      " 61139 48745    0.00047  304  348          -    0.00000      -  31.8  116s\n",
-      " 62931 50978    5.00050  508  360          -    0.00000      -  31.2  121s\n",
-      " 65354 53357   88.00013  723  329          -    0.00000      -  31.0  125s\n",
-      " 68730 56211   26.00014  324  347          -    0.00000      -  30.3  130s\n",
-      " 72399 60029   35.00013  635  261          -    0.00000      -  29.7  135s\n",
-      " 76261 62936   35.00024  980  242          -    0.00000      -  28.8  140s\n",
-      " 79294 65991   55.00018 1380  259          -    0.00000      -  28.5  145s\n",
-      " 80576 67111 infeasible 1449               -    0.00000      -  28.4  150s\n",
-      " 85157 71588    0.00026  281  277          -    0.00000      -  28.3  156s\n",
-      " 89392 74924   25.00012  522  290          -    0.00000      -  27.7  161s\n",
-      " 92090 77550    0.00036  212  298          -    0.00000      -  27.2  165s\n",
-      " 95613 81077   20.00016  553  342          -    0.00000      -  27.0  171s\n",
-      " 98185 83248   20.00028  798  338          -    0.00000      -  26.8  175s\n",
-      " 101152 85909   28.00026 1164  299          -    0.00000      -  26.6  180s\n",
-      " 105073 89800   72.00024 1430  332          -    0.00000      -  26.0  186s\n"
+      " 829629 770870    0.00022  238  409          -    0.00000      -  18.1 1496s\n",
+      " 831693 772973    0.00034  516  419          -    0.00000      -  18.0 1500s\n",
+      " 833914 775199    0.00041  802  418          -    0.00000      -  18.0 1505s\n",
+      " 837527 778517   38.00016 1180  432          -    0.00000      -  18.0 1512s\n",
+      " 840080 780668    0.00028   53  457          -    0.00000      -  18.0 1516s\n",
+      " 842017 782905    0.00035  278  433          -    0.00000      -  18.0 1521s\n",
+      " 844268 785152 infeasible  532               -    0.00000      -  18.0 1525s\n",
+      " 847141 787586   61.00000 1538  359          -    0.00000      -  18.0 1530s\n",
+      " 849273 788846   16.00015  179  438          -    0.00000      -  18.0 1537s\n",
+      " 850450 790693   26.00024  272  474          -    0.00000      -  18.0 1540s\n",
+      " 853466 793545   58.00006  541  449          -    0.00000      -  18.0 1546s\n",
+      " 856007 796249   58.00013  747  453          -    0.00000      -  18.0 1551s\n",
+      " 859444 798953   58.00017  977  451          -    0.00000      -  18.0 1556s\n",
+      " 861499 801306   58.00022 1128  452          -    0.00000      -  18.0 1560s\n",
+      " 864594 804109   73.00022 1343  442          -    0.00000      -  17.9 1565s\n",
+      " 867997 807560    0.00027  220  347          -    0.00000      -  17.9 1570s\n",
+      " 870710 809711    0.00034  465  349          -    0.00000      -  17.9 1575s\n",
+      " 873727 812927    0.00040  832  337          -    0.00000      -  17.9 1581s\n",
+      " 875999 815697   16.00037 1081  354          -    0.00000      -  17.9 1586s\n",
+      " 879388 817792   16.00058 1335  353          -    0.00000      -  17.9 1590s\n",
+      " 881951 820559   29.00026 1678  329          -    0.00000      -  17.9 1595s\n",
+      " 883042 820635    0.00010  246  171          -    0.00000      -  17.9 1600s\n",
+      " 884584 823351    0.00021  939  194          -    0.00000      -  17.9 1605s\n",
+      " 887891 826053    0.00019  215  390          -    0.00000      -  17.9 1610s\n",
+      " 890961 829658    0.00030  581  392          -    0.00000      -  17.9 1617s\n",
+      " 893821 832009    0.00034  836  354          -    0.00000      -  17.9 1621s\n",
+      " 896620 834359   16.00034 1030  428          -    0.00000      -  17.9 1626s\n",
+      " 899455 837027   43.00018 1329  317          -    0.00000      -  17.9 1631s\n",
+      " 901652 838822    0.00007   41  312          -    0.00000      -  17.9 1635s\n",
+      " 904372 841580    0.00011  379  279          -    0.00000      -  17.9 1641s\n",
+      " 906386 843889   11.00007  626  262          -    0.00000      -  17.9 1645s\n",
+      " 909958 846629   11.00013 1014  264          -    0.00000      -  17.9 1651s\n",
+      " 912637 849159   48.00000 1306  313          -    0.00000      -  17.9 1656s\n",
+      " 913646 849278   69.00000 1410  164          -    0.00000      -  17.9 1661s\n",
+      " 914893 851404    0.00021  108  365          -    0.00000      -  17.9 1665s\n",
+      " 917819 854329    0.00028  466  339          -    0.00000      -  17.9 1671s\n",
+      " 920508 857033    0.00032  722  348          -    0.00000      -  17.9 1676s\n",
+      " 923417 859572    0.00043 1073  345          -    0.00000      -  17.9 1681s\n",
+      " 925874 861652   18.00040 1316  345          -    0.00000      -  17.9 1685s\n",
+      " 928352 864112   37.00022 1693  291          -    0.00000      -  17.9 1690s\n",
+      " 931068 866732    0.00014  204  211          -    0.00000      -  17.9 1695s\n",
+      " 933180 868858    0.00023  518  197          -    0.00000      -  17.9 1700s\n",
+      " 936396 871709    0.00036  978  208          -    0.00000      -  17.9 1707s\n",
+      " 938495 874110   29.00024 1250  280          -    0.00000      -  17.9 1711s\n",
+      " 941003 876192   29.00027 1539  286          -    0.00000      -  17.9 1716s\n",
+      " 943257 878590 infeasible 1749               -    0.00000      -  17.9 1720s\n",
+      " 945078 886208    5.00012   92  353          -    0.00000      -  17.9 1739s\n",
+      " 952926 887137   62.00014  952  323          -    0.00000      -  17.9 1741s\n",
+      " 955734 889790   79.00024 1320  293          -    0.00000      -  17.8 1746s\n",
+      " 957549 891693   96.00022 1550  331          -    0.00000      -  17.8 1750s\n",
+      " 959918 893984    0.00021  190  273          -    0.00000      -  17.9 1755s\n",
+      " 962781 896579    0.00032  557  252          -    0.00000      -  17.8 1760s\n",
+      " 965778 899548   15.00024  963  233          -    0.00000      -  17.8 1766s\n",
+      " 968415 902477   15.00051 1263  242          -    0.00000      -  17.8 1772s\n",
+      " 971203 903848   39.00026 1497  268          -    0.00000      -  17.8 1780s\n",
+      " 972987 906790   67.00000 1696  271          -    0.00000      -  17.8 1785s\n",
+      " 977109 909808   27.00018 1071  376          -    0.00000      -  17.8 1790s\n",
+      " 979696 912473    0.00018  288  303          -    0.00000      -  17.8 1795s\n",
+      " 982360 915186    0.00025  586  304          -    0.00000      -  17.8 1800s\n",
+      " 985805 918490    0.00035  900  307          -    0.00000      -  17.8 1806s\n",
+      " 988431 920584   23.00013 1170  379          -    0.00000      -  17.8 1810s\n",
+      " 991630 923756   41.00030 1461  354          -    0.00000      -  17.8 1816s\n",
+      " 993930 926021    0.00017   63  385          -    0.00000      -  17.8 1820s\n",
+      " 997437 929110    0.00023  366  375          -    0.00000      -  17.8 1826s\n",
+      " 999814 931573    0.00035  622  366          -    0.00000      -  17.8 1830s\n",
+      " 1002446 934122   18.00022  896  349          -    0.00000      -  17.8 1835s\n",
+      " 1005279 936830   34.00010 1185  365          -    0.00000      -  17.8 1841s\n",
+      " 1008392 939561 infeasible 1470               -    0.00000      -  17.8 1846s\n",
+      " 1010334 941415 infeasible  224               -    0.00000      -  17.8 1850s\n",
+      " 1013320 943578    0.00016  175  288          -    0.00000      -  17.8 1858s\n",
+      " 1013533 944545    0.00016  237  289          -    0.00000      -  17.8 1860s\n",
+      " 1016616 947474    0.00025  651  294          -    0.00000      -  17.7 1866s\n",
+      " 1018704 949526    0.00035  935  293          -    0.00000      -  17.7 1870s\n",
+      " 1021751 952414   29.00010 1287  343          -    0.00000      -  17.7 1876s\n",
+      " 1023934 954393   46.00000 1527  325          -    0.00000      -  17.7 1880s\n",
+      " 1027321 958075    0.00032  134  412          -    0.00000      -  17.7 1887s\n",
+      " 1030645 961118    0.00037  329  409          -    0.00000      -  17.7 1891s\n",
+      " 1033920 963684   28.00008  560  323          -    0.00000      -  17.7 1896s\n",
+      " 1036683 966679   28.00019  904  326          -    0.00000      -  17.7 1901s\n",
+      " 1039010 968892   28.00032 1177  331          -    0.00000      -  17.7 1906s\n",
+      " 1042368 972351   74.00000 1488  325          -    0.00000      -  17.7 1912s\n",
+      " 1045491 973732    0.00018   53  366          -    0.00000      -  17.7 1918s\n",
+      " 1045524 974703    0.00018   58  371          -    0.00000      -  17.7 1920s\n",
+      " 1048387 977277    0.00020  347  365          -    0.00000      -  17.7 1925s\n",
+      " 1051344 980283   11.00027  661  323          -    0.00000      -  17.7 1930s\n",
+      " 1054319 983002   20.00032 1002  383          -    0.00000      -  17.7 1936s\n",
+      " 1057486 985879   33.00021 1379  339          -    0.00000      -  17.7 1941s\n",
+      " 1059521 988121   46.00029 1555  301          -    0.00000      -  17.7 1945s\n",
+      " 1062520 991098    0.00035 1079  266          -    0.00000      -  17.7 1950s\n",
+      " 1065939 993960    5.00023  145  331          -    0.00000      -  17.7 1955s\n",
+      " 1069382 997320   24.00011  457  430          -    0.00000      -  17.7 1961s\n",
+      " 1073052 1000115   40.00008  694  324          -    0.00000      -  17.7 1966s\n",
+      " 1075948 1002993    0.00029   37  359          -    0.00000      -  17.7 1971s\n",
+      " 1079339 1007102    0.00044  356  315          -    0.00000      -  17.7 1977s\n",
+      " 1082960 1009457    0.00050  631  292          -    0.00000      -  17.7 1980s\n",
+      " 1085105 1011370    0.00064  892  296          -    0.00000      -  17.7 1985s\n",
+      " 1086542 1012032   16.00046 1075  322          -    0.00000      -  17.7 1991s\n",
+      " 1087618 1013633   16.00078 1187  336          -    0.00000      -  17.7 1995s\n",
+      " 1090735 1016693   29.00035 1664  273          -    0.00000      -  17.7 2001s\n",
+      " 1092943 1019552   21.00040  806  261          -    0.00000      -  17.7 2006s\n",
+      " 1096302 1021866   76.00069 1797  406          -    0.00000      -  17.7 2010s\n",
+      " 1098851 1024201    0.00030  286  405          -    0.00000      -  17.7 2015s\n",
+      " 1101036 1026302    0.00042  560  328          -    0.00000      -  17.7 2022s\n",
+      " 1102602 1027998    0.00044  778  317          -    0.00000      -  17.7 2027s\n",
+      " 1104390 1029746   14.00036 1000  370          -    0.00000      -  17.7 2031s\n",
+      " 1106192 1031532   14.00047 1236  370          -    0.00000      -  17.7 2035s\n",
+      " 1108995 1034098   27.00032 1609  340          -    0.00000      -  17.7 2040s\n",
+      " 1110870 1035984    0.00018  116  237          -    0.00000      -  17.7 2045s\n",
+      " 1113894 1038895    0.00030  556  234          -    0.00000      -  17.7 2051s\n",
+      " 1115978 1040994    0.00035  856  240          -    0.00000      -  17.7 2055s\n",
+      " 1118714 1044023   18.00029 1145  243          -    0.00000      -  17.6 2060s\n",
+      " 1122482 1046104   45.00010 1508  311          -    0.00000      -  17.7 2069s\n",
+      " 1122523 1046929   45.00010 1509  313          -    0.00000      -  17.7 2071s\n",
+      " 1124731 1048481    9.00018  172  268          -    0.00000      -  17.7 2075s\n",
+      " 1127299 1051207    9.00024  509  268          -    0.00000      -  17.7 2080s\n",
+      " 1129630 1053683   49.00008  750  235          -    0.00000      -  17.7 2085s\n",
+      " 1132785 1056301   49.00029 1146  251          -    0.00000      -  17.7 2090s\n",
+      " 1135569 1059772    0.00015  156  208          -    0.00000      -  17.7 2097s\n",
+      " 1138823 1062643   15.00029 1540  215          -    0.00000      -  17.7 2101s\n",
+      " 1141541 1064323    0.00028  143  326          -    0.00000      -  17.7 2105s\n",
+      " 1143714 1066494    0.00069  433  322          -    0.00000      -  17.7 2110s\n",
+      " 1146149 1068951    0.00016  258  313          -    0.00000      -  17.7 2115s\n",
+      " 1148830 1071685    0.00026  611  287          -    0.00000      -  17.6 2121s\n",
+      " 1150741 1073422   16.00017  850  344          -    0.00000      -  17.6 2125s\n",
+      " 1153581 1076113   29.00011 1227  387          -    0.00000      -  17.6 2131s\n",
+      " 1155500 1078125   32.00017 1481  299          -    0.00000      -  17.6 2135s\n",
+      " 1158610 1081055    0.00016  277  226          -    0.00000      -  17.6 2141s\n",
+      " 1160600 1083402    0.00025  557  213          -    0.00000      -  17.6 2146s\n",
+      " 1163487 1085853   22.00045  800  242          -    0.00000      -  17.6 2150s\n",
+      " 1164746 1086004   38.00035  904  224          -    0.00000      -  17.6 2155s\n",
+      " 1166674 1088612   52.00034 1273  282          -    0.00000      -  17.6 2160s\n",
+      " 1169444 1091377    0.00008   32  323          -    0.00000      -  17.6 2165s\n",
+      " 1172515 1094324    0.00014  405  301          -    0.00000      -  17.6 2171s\n",
+      " 1174610 1096436    0.00016  648  308          -    0.00000      -  17.6 2176s\n",
+      " 1177887 1099458    0.00024 1019  289          -    0.00000      -  17.6 2182s\n",
+      " 1180666 1102756 infeasible 1205               -    0.00000      -  17.6 2186s\n",
+      " 1183913 1105117    0.00016  214  304          -    0.00000      -  17.6 2190s\n",
+      " 1186732 1107543    0.00025  517  303          -    0.00000      -  17.6 2195s\n",
+      " 1189525 1110455   33.00020  828  281          -    0.00000      -  17.6 2201s\n",
+      " 1191555 1112341   36.00030 1058  319          -    0.00000      -  17.6 2205s\n",
+      " 1193667 1114214   49.00013 1271  346          -    0.00000      -  17.6 2210s\n",
+      " 1196380 1116811 infeasible   23               -    0.00000      -  17.6 2216s\n",
+      " 1198254 1118606    0.00014  300  225          -    0.00000      -  17.6 2220s\n",
+      " 1199221 1118726    0.00017  449  232          -    0.00000      -  17.6 2226s\n",
+      " 1199377 1126563    0.00017  451  224          -    0.00000      -  17.6 2244s\n",
+      " 1207385 1127909   47.00008 1414  369          -    0.00000      -  17.6 2247s\n",
+      " 1208918 1129684    0.00031   69  245          -    0.00000      -  17.6 2250s\n",
+      " 1212277 1132155    0.00052  339  225          -    0.00000      -  17.6 2255s\n",
+      " 1215809 1134929   55.00019  648  286          -    0.00000      -  17.6 2260s\n",
+      " 1218223 1137269   96.00026  915  364          -    0.00000      -  17.6 2266s\n",
+      " 1220757 1139947  152.00000 1224  209          -    0.00000      -  17.6 2272s\n",
+      " 1222803 1141665    0.00020  140  200          -    0.00000      -  17.6 2276s\n",
+      " 1224587 1143361   19.00006  414  237          -    0.00000      -  17.6 2280s\n",
+      " 1227459 1146382   38.00014  969  242          -    0.00000      -  17.6 2286s\n",
+      " 1229606 1148032   16.00016  160  291          -    0.00000      -  17.6 2290s\n",
+      " 1232488 1150897   37.00048  513  359          -    0.00000      -  17.6 2297s\n",
+      " 1234585 1152980   37.00073  778  338          -    0.00000      -  17.5 2301s\n",
+      " 1236698 1155024   37.00114 1038  340          -    0.00000      -  17.5 2306s\n",
+      " 1239207 1157540   62.00046 1256  345          -    0.00000      -  17.5 2311s\n",
+      " 1241955 1160284   69.00052 1497  320          -    0.00000      -  17.5 2316s\n",
+      " 1244885 1161723    0.00015  101  220          -    0.00000      -  17.5 2324s\n",
+      " 1244962 1169185    0.00015  102  224          -    0.00000      -  17.5 2343s\n",
+      " 1252970 1170361   15.00020 1091  227          -    0.00000      -  17.5 2345s\n",
+      " 1256191 1173195   28.00011 1560  237          -    0.00000      -  17.5 2352s\n",
+      " 1258142 1174997   45.00000 1841  223          -    0.00000      -  17.5 2356s\n",
+      " 1260288 1176736    5.00013  251  191          -    0.00000      -  17.5 2360s\n",
+      " 1262121 1178637    5.00018  562  197          -    0.00000      -  17.5 2365s\n",
+      " 1265262 1181817   60.00083 1056  123          -    0.00000      -  17.5 2372s\n",
+      " 1267825 1184373    5.00030   99  392          -    0.00000      -  17.5 2377s\n",
+      " 1269303 1185491    5.00034  200  383          -    0.00000      -  17.5 2380s\n",
+      " 1273081 1189208    5.00038  484  374          -    0.00000      -  17.5 2387s\n",
+      " 1275231 1190694    5.00054  666  376          -    0.00000      -  17.5 2391s\n"
      ]
     }
    ],
    "source": [
     "# Set model parameters if necessary, e.g., setting the feasibility tolerance\n",
     "model.setParam(\"IntFeasTol\", 1e-9)\n",
+    "model.setParam(\"Threads\", 4) \n",
+    "\n",
+    "# Optional: Currently going for the optimal solution\n",
+    "# model.setParam(\"MIPGap\", 0.01)       # Accept a solution within 1% of optimal\n",
     "\n",
     "# Optimize the model\n",
     "model.optimize()"
