chore: improve README

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -391,7 +391,49 @@
       " 1330181 1243246   16.00022 1065  301          -    0.00000      -  17.5 2526s\n",
       " 1332928 1245843   16.00042 1342  290          -    0.00000      -  17.4 2531s\n",
       " 1335464 1247554   37.00030 1587  304          -    0.00000      -  17.4 2536s\n",
-      " 1337642 1249579    0.00014  169  295          -    0.00000      -  17.4 2540s\n"
+      " 1337642 1249579    0.00014  169  295          -    0.00000      -  17.4 2540s\n",
+      " 1340170 1251817    0.00026  504  288          -    0.00000      -  17.5 2546s\n",
+      " 1341865 1253595   16.00017  738  291          -    0.00000      -  17.5 2551s\n",
+      " 1343688 1255391   16.00025  997  298          -    0.00000      -  17.4 2555s\n",
+      " 1346430 1257985   29.00013 1369  328          -    0.00000      -  17.4 2561s\n",
+      " 1348324 1260095   89.00042 1607  298          -    0.00000      -  17.4 2566s\n",
+      " 1351120 1262715   15.00024 1122  481          -    0.00000      -  17.4 2571s\n",
+      " 1353129 1263971    5.00007   36  414          -    0.00000      -  17.5 2575s\n",
+      " 1355396 1266788   26.00006  265  447          -    0.00000      -  17.5 2581s\n",
+      " 1358405 1269089   55.00000  499  494          -    0.00000      -  17.4 2586s\n",
+      " 1360158 1270564    0.00019  160  320          -    0.00000      -  17.4 2590s\n",
+      " 1361765 1271409    0.00025  360  329          -    0.00000      -  17.4 2598s\n",
+      " 1361915 1272637    0.00025  362  327          -    0.00000      -  17.4 2600s\n",
+      " 1365249 1275347    0.00032  683  317          -    0.00000      -  17.4 2606s\n",
+      " 1366832 1277104    0.00043  897  287          -    0.00000      -  17.4 2611s\n",
+      " 1368806 1279014   24.00031 1162  337          -    0.00000      -  17.4 2616s\n",
+      " 1370817 1281016   39.00016 1410  306          -    0.00000      -  17.4 2620s\n",
+      " 1372845 1282761 infeasible 1503               -    0.00000      -  17.4 2625s\n",
+      " 1375756 1285235    0.00027  419  301          -    0.00000      -  17.5 2631s\n",
+      " 1377547 1287035    0.00029  692  294          -    0.00000      -  17.5 2636s\n",
+      " 1379787 1289503   16.00042 1298  498          -    0.00000      -  17.4 2641s\n",
+      " 1381902 1291281    0.00038  168  239          -    0.00000      -  17.4 2645s\n",
+      " 1384848 1294123   21.00021  550  212          -    0.00000      -  17.4 2651s\n",
+      " 1386825 1295911   21.00032  819  222          -    0.00000      -  17.4 2655s\n",
+      " 1389659 1298692   45.00032 1164  223          -    0.00000      -  17.4 2661s\n",
+      " 1391762 1300373   69.00036 1394  321          -    0.00000      -  17.4 2665s\n",
+      " 1394566 1303224    0.00012  286  255          -    0.00000      -  17.4 2671s\n",
+      " 1397329 1306112    0.00015  640  259          -    0.00000      -  17.4 2676s\n",
+      " 1398491 1306179    0.00016  766  249          -    0.00000      -  17.4 2682s\n",
+      " 1399677 1307989    0.00017  896  233          -    0.00000      -  17.4 2686s\n",
+      " 1402340 1310325 infeasible 1193               -    0.00000      -  17.4 2691s\n",
+      " 1404204 1312211    0.00013  184  392          -    0.00000      -  17.4 2695s\n",
+      " 1406815 1314939    0.00017  364  390          -    0.00000      -  17.4 2700s\n",
+      " 1409309 1317030    0.00024  535  370          -    0.00000      -  17.4 2705s\n",
+      " 1412676 1320108    0.00026  777  361          -    0.00000      -  17.4 2710s\n",
+      " 1414885 1321925   15.00017 1002  295          -    0.00000      -  17.4 2715s\n",
+      " 1417058 1324247   15.00025 1304  296          -    0.00000      -  17.4 2720s\n",
+      " 1420240 1327298   24.00032  734  350          -    0.00000      -  17.4 2726s\n",
+      " 1422452 1329229   74.00016 1551  430          -    0.00000      -  17.4 2730s\n",
+      " 1424843 1331484    0.00018  243  225          -    0.00000      -  17.4 2735s\n",
+      " 1427495 1334235    0.00025  578  229          -    0.00000      -  17.4 2741s\n",
+      " 1429574 1336055    0.00036  825  239          -    0.00000      -  17.4 2746s\n",
+      " 1431370 1337887   31.00006 1051  208          -    0.00000      -  17.4 2750s\n"
      ]
     }
    ],
