--- a/demo.ipynb
+++ b/demo.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze the affect of the number of part sytles  "
+    "# Run Experiments"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualize Results and Example Solutions "
+    "## Visualize Results"
    ]
   },
   {
